css tweak to fix text alignment
git-svn-id: file:///media/Data/Repos/SquidgyCMS/trunk@102 2fba2af6-d892-294d-8f6b-3ba2989aa45f

--- a/SquidgyCMS.css
+++ b/SquidgyCMS.css
@@ -47,7 +47,7 @@ ul.tick_list li	{ vertical-align: middle; line-height: 1.5em; display: block; fl
 #login td input.text, #login_button	{ width: 200px; margin: 1px; }
 
 /* Admin.php */
-#admin_divs_holder	{ }/* margin-top: 1.8em; */
+#admin_divs_holder	{ margin-top: 2px; }/* margin-top: 1.8em; */
 #admin_divs_holder h3	{ margin: 0.6em 0 0.1em -0.3em; }
 
 .admin_div	{ }/* margin-top: 1em; */
